fix public note overflow

--- a/assets/styles/bootstrap/panels.less
+++ b/assets/styles/bootstrap/panels.less
@@ -15,6 +15,7 @@
 // Panel contents
 .panel-body {
   padding: @panel-body-padding;
+  word-wrap: break-word;
   &:extend(.clearfix all);
 }
 
